--- a/fingerprint_service/docker-compose.yml
+++ b/fingerprint_service/docker-compose.yml
@@ -22,7 +22,31 @@ services:
     networks:
       - fingerprint_engine_net
       - fingerprint_client_net
-
+  mysql:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    expose: 
+      - 3306
+    volumes:
+      - ./mysql/data:/var/lib/mysql
+    env_file:
+      - ../.env
+  app:
+    restart: always
+    build: 
+      context: ./
+      dockerfile: app.Dockerfile
+    command: yarn dev
+    env_file:
+      - ../.env
+    ports:
+      - 3000:3000
+    expose:
+      - 3306
+    volumes:
+      - "./app/:/usr/src/app/"
+      - "/usr/src/app/node_modules"
 networks:
   fingerprint_engine_net:
   fingerprint_client_net:
