--- a/fingerprint_service/docker-compose.yml
+++ b/fingerprint_service/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.5'
-
 services:
   fingerprint_engine:
     image: dahirmuhammaddahir/grpc_fingerprint_engine
@@ -15,6 +13,8 @@ services:
     build: .
     ports:
       - 5555:80
+    expose:
+      - 80
     restart: unless-stopped
     container_name: r3y3s_fingerprint_client
     depends_on:
@@ -22,6 +22,8 @@ services:
     networks:
       - fingerprint_engine_net
       - fingerprint_client_net
+    volumes:
+      - ./coreComponents:/var/www/html/coreComponents
   mysql:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
@@ -35,7 +37,6 @@ services:
   app:
     restart: always
     build: 
-      context: ./
       dockerfile: app.Dockerfile
     command: yarn dev
     env_file:
@@ -47,6 +48,8 @@ services:
     volumes:
       - "./app/:/usr/src/app/"
       - "/usr/src/app/node_modules"
+    networks:
+      - fingerprint_client_net
 networks:
   fingerprint_engine_net:
   fingerprint_client_net:
